[gd_scene load_steps=2 format=3 uid="uid://dhkwfv6ve430s"]

[ext_resource type="Script" uid="uid://dao86dashntxg" path="res://UI/Menus/Pause Menu/gds_pause_menu.gd" id="1_u48vd"]

[node name="ScnPauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_u48vd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0627451)

[node name="BtnContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -20.0
offset_right = 121.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnResume" type="Button" parent="BtnContainer"]
layout_mode = 2
text = "Resume"

[node name="BtnOptions" type="Button" parent="BtnContainer"]
layout_mode = 2
text = "Options"

[node name="BtnQuit" type="Button" parent="BtnContainer"]
layout_mode = 2
text = "Quit"

[node name="BtnQuit2" type="Button" parent="BtnContainer"]
layout_mode = 2
text = "Main Mneu"

[connection signal="pressed" from="BtnContainer/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="BtnContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="BtnContainer/BtnQuit2" to="." method="_on_btn_quit_2_pressed"]
